@@ -6,6 +6,9 @@
 * Fix an issue where pip did not properly unquote quoted URLs which contain
   characters like PEP 440's epoch separator (``!``).
 
+* Fix an issue where distutils installed projects were not actually uninstalled
+  and deprecate attempting to uninstall them altogether.
+
 
 **6.0.7 (2015-01-28)**
 
